<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/bcimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/saveProfilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:layout_marginBottom="24dp"
        android:src="@drawable/profileimage"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:hint="@string/Name"
        android:textSize="18sp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints=""
        tools:ignore="TextFields,TextViewEdits"
        app:drawableStartCompat="@drawable/ic_name" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/Email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tools:ignore="TextFields,TextViewEdits"
        app:drawableStartCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/Age"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="TextFields,TextViewEdits"
        app:drawableStartCompat="@drawable/ic_age" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/Phone_number"
        android:inputType="number"
        android:padding="10dp"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge"
        tools:ignore="TextFields,TextViewEdits"
        app:drawableStartCompat="@drawable/ic_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>